--- a/로그인/순서.md
+++ b/로그인/순서.md
@@ -33,4 +33,14 @@
 
 * MemberService에 Dao로 옮겨줄 함수 작성 후 MemberDao.java에 선언 후 MemberDao.xml 작성
 
-  
+### 실행
+
+* 회원가입
+  * http://localhost:8021/usr/member/doJoin?loginId=user1&loginPw=1234&name=홍길동&nickname=강바람&cellphoneNo=01012341234&email=test@test.com
+* 로그인
+  * http://localhost:8021/usr/member/doLogin?loginId=user1&loginPw=user1
+* 로그아웃
+  * http://localhost:8021/usr/member/doLogout
+* 회원정보수정
+  * http://localhost:8021/usr/member/doModify?name=홍&nickname=나플라
+
