--- a/준비.md
+++ b/준비.md
@@ -21,7 +21,21 @@
   * 소스코드 관리
   * 강사 깃(https://github.com/jhs512/untactTeacher)
 * [SQLYOG COMMUNUTY EDITION](https://github.com/webyog/sqlyog-community/wiki/Downloads)
-  * 
+  * mysql 편하게 사용할 수 있음
+
+### 이클립스 단축키
+
+* Ctrl + Shift + R
+  * 원하는 파일 검색해서 열기
+* Ctrl + Shift + F
+  * 페이지 보기 좋게 정렬
+
+### SQLyog 단축키
+
+* F9
+  * 실행
+* 테이블 클릭 후 F6
+  * 테이블 변경 가능
 
 ## 진행
 
