--- a/시작.md
+++ b/시작.md
@@ -58,3 +58,7 @@
 * 워크스페이스 삭제 후 시작
 * C:\Users\User\.m2\repository 삭제 후 시작
 
+* 로그백을 사용하면 LOG_PATH_IS_UNDEFINED 폴더 생김
+  * resources 폴더의 로그백이 application.yml보다 먼저 읽혀서 생기는 것
+  * 해결법은 구글링해볼것(지금은 상관없음)
+
