--- a/로그인/순서.md
+++ b/로그인/순서.md
@@ -1,5 +1,7 @@
 # 순서
 
+##### 로그인, 로그아웃은 post로 넘겨주는게 기본임
+
 * 쿼리스트링으로 넘겨줄 값 먼저 작성해 봄
   * http://localhost:8021/usr/member/doJoin?loginId=user1&loginPw=1234&name=홍길동&nickname=강바람&cellphoneNo=01012341234&email=test@test.com
 * UsrMemberController 생성
@@ -32,15 +34,3 @@
 * UsrMemberController에 회원정보수정 구현
 
 * MemberService에 Dao로 옮겨줄 함수 작성 후 MemberDao.java에 선언 후 MemberDao.xml 작성
-
-### 실행
-
-* 회원가입
-  * http://localhost:8021/usr/member/doJoin?loginId=user1&loginPw=1234&name=홍길동&nickname=강바람&cellphoneNo=01012341234&email=test@test.com
-* 로그인
-  * http://localhost:8021/usr/member/doLogin?loginId=user1&loginPw=user1
-* 로그아웃
-  * http://localhost:8021/usr/member/doLogout
-* 회원정보수정
-  * http://localhost:8021/usr/member/doModify?name=홍&nickname=나플라
-
