--- a/실행 주소.md
+++ b/실행 주소.md
@@ -20,7 +20,7 @@
 
 * 게시물 추가
 
-  * http://localhost:8021/usr/article/doAdd?title=제목&body=내용
+  * http://localhost:8021/usr/article/doAdd?boardId=2&title=제목&body=내용
 
 * 게시물 제거
 
@@ -41,5 +41,12 @@
 * 회원정보수정
   * http://localhost:8021/usr/member/doModify?name=임꺽정
 
-* 댓글
-  * 
+* 댓글 추가
+  * http://localhost:8021/usr/article/doAddReply?articleId=2&body=내용
+  
+* 댓글 리스트
+
+  * http://localhost:8021/usr/reply/list?relTypeCode=article&relId=2
+
+* 댓글 수정
+  * http://localhost:8021/usr/reply/doModify?id=1&body=ㅋㅋㅋ
