--- a/준비.md
+++ b/준비.md
@@ -37,6 +37,21 @@
 * 테이블 클릭 후 F6
   * 테이블 변경 가능
 
+### JSON Viewer
+
+* json 을 보기 좋게 해주는 크롬확장프로그램
+
+### Postman
+
+* 주소를 계속 적어주는 걸 대신 해주는 툴
+* 다운로드하고 구글로그인 하면 됨
+* My Workspace에서 new -> Collection -> 이름 변경(프로젝트명)
+* untact 우클릭 -> Add Folder -> 이름 변경(로그인)
+* 로그인 우클릭 -> Add Request -> 이름 변경(user1)
+* 로그인 우클릭 -> Add Request -> 이름 변경(user2)
+* GET 부분에 주소 적고 밑에 KEY에 loginId, loginPw 기리고 VALUE에는 user1, user1 적어주고 Send 누름
+* 이런식으로 한번 만들어 놓으면 들어가서 Send만 눌러서 사용 가능
+
 ## 진행
 
 * 바탕화면에 STS 4.12.0 실행
@@ -45,7 +60,6 @@
   * files 검색 후 css,html,jsp 를 utf-8로 변경
   * work 검색 후 utf-8로 변경
   * font 검색 후 Basic 맨 밑에 더블 클릭해서 원하는 폰트로 변경
-
 * File - New - Spring Starter Project 클릭
   * Packaging 을 Jar -> War 로 변경 후 Next
   * 검색을 통해서 필요한 것 체크 후 next - finish
@@ -54,8 +68,7 @@
     * MyBatis Framework
     * MySQL Driver
     * Spring Web
-
-* 한참 다운로드 받음
+* pom.xml 에서 java.version 을 8로 바꿔줘야 함
 
 ## 프레임워크란
 
