--- a/JSP/순서.md
+++ b/JSP/순서.md
@@ -57,3 +57,113 @@
 * 인터넷창에서 F12 클릭해서 위쪽 모바일 모양 클릭 후, 상단의 폰을 iphone 5로 설정함
 * 깃에서 복사해서 head.jspf에 모바일 반응형부분 코드 추가
 * login.jsp 코드 수정
+
+### 자동로그인
+
+* sql로 authKey 컬럼 생성 후, UUID(고유 식별자)로 데이터 채우기 및 인덱스 생성
+* 회원가입시에 authKey가 자동으로 생성되도록 MemberDao.xml의 join 부분 밑에 코드 추가 및 테스트
+* 나중에 쿼리문 전체 다시 실행 시에 포스트맨 주소변경하지 않도록 id별 authKey 고정되게 쿼리문 변경
+
+### 로그인 없이 authKey로 글쓰기
+
+* 포스트맨에 파일 생성
+* BeforeActionInterceptor에 코드 추가
+* 관련 코드들 추가 및 변경(Service, Dao, NeedLoginInterceptor)
+
+### 로그인 아이디, 비번으로 authKey 얻기
+
+* WebMvcConfig에서 로그인 없이 authKey주소 갈 수 있게 함
+
+* UsrMemberController 에서 doLogin 복붙해서 수정
+  * session 필요없고, 결과에 authKey 값 같이 출력되게
+
+### authKey 로 회원정보 확인
+
+* UsrMemberController의 authKey 부분 결과에 다른 정보들 추가하고 테스트하면 보임
+* UsrMemberController에 memberByAuthKey 생성
+  * 유요한 회원인지랑 그 회원의 정보 출력
+* 비번이나 authKey가 출력되지 않도록 Member에 loginPw, authKey 위에 @JsonIgnore 붙힘
+  * 출력될 때 빼고 나옴
+
+### CORS 허용
+
+* 코드팬에서 잘 보이도록(CORS 문제가 발생함)
+  * 코드팬에서 가져갈 수 있다면 어디서든 가져갈 수 있음
+* WebMvcConfig 맨 위에 적은 코드면 끝
+
+### 포스트맨에서 포스트, 겟 변경
+
+* 포스트맨에서 포스트로 돼있는 부분들의 Params값에서 Bulk Edit 누르고 잘라내서 body의 x-www-form-urlencoded 에 붙혀 넣음(포스트방식의 정석)
+  * 정리.md 파일에 포스트,겟 차이점 정리했음
+
+### 코드펜
+
+* 깃으로 가입 및 세팅
+  * 폰트 : Hack
+  * Indent Width : 2
+  * Autocomplete 체크
+
+* https://codepen.io/hyun-kim95/pen/QWMEXYe
+  * codepen.id/pen 들어가서 아무데나 데고 Ctrl + s 하면 고유 주소가 생김
+  * 나중에도 이 주소로 이어서 작업 가능
+
+* 작업할 때 doctype이나 html 그런거 안써도 됨(숨어있음)
+  * 바로 div부터 시작 가능
+
+* Settings에서 제이쿼리,데일위드,폰트어썸 불러오기
+  * JS 의 검색부분에 jq 만 쓰면 나옴, 주소 잘라내서 html부분에 넣기(script 태그)
+  * CSS의 검색부분에 tai, fon 만 쓰면 나옴, 주소 잘라내서 html부분에 넣기(link 태그)
+
+* 폰트는 눈누 들어가서 맘에드는 코드 css부분에 붙혀넣고 마지막녀석만 html > body 로 변경하면 됨
+
+### 테일윈드로 버튼구현(연습)
+
+* css를 할 줄 알아도 사용하는 것을 추천함
+* 테일윈드 링크 걸어주면 알아서 노멀라이징해줌
+* tailwind button 검색 -> components 부분 들어가서 맘에 드는 버튼의 코드 따와서 사용
+* 모르는 코드는 Tailwind CSS Cheat Sheet 에서 검색 해보면 됨
+
+### 로고 구현(코드펜)
+
+* 필요한 로고는 fontAwesomeCheatsheet 에서 찾아서 이름 복사, fontAwsome에서 검색, 코드 복사 후 사용
+* 사용할 부분에 span태그로 사용함
+* 로고는 자주 사용하는 거라서 css에 따로 작업함
+
+### 로고 적용
+
+* 코드펜에 적어놨던 제이쿼리,테인윈드,폰트어썸 링크 가져와서 head에 적기
+
+* login.jsp에 div태그 만들어서 그 안에 코드펜에서 만든 로고 코드랑 로그인창 꾸민 form태그를 같이 넣어서 새로로 나오게 만듬
+* flex는 바로 하위 태그에 적용되는 거라서 w-full을 한단계 상위로 옮겼음
+
+### 로그인 처리시 관리자 홈으로 이동
+
+* admMemberController의 doLogin의 responseBody 제거 밑 코드 수정
+* Util에 코드 추가
+* NeedAdminInterceptor 에서 isAjax = request.getParameter("isAdmin") != null; 로 수정
+  * 주소 뒤에 isAjax가 붙어 있으면 관리자모드, 없으면 일반 모드로 봄
+
+### 관리자 메인화면 구현
+
+* adm폴더 밑에 home폴더의 main.jsp 생성 및 head와 foot 생성
+
+* admHomeController 코드 수정 및 테스트
+* mainLayoutFoot.jspf, mainLayoutHead.jspf 생성 및 main.jsp의 헤드,풋 수정
+  * 메인전용 헤더, 푸터
+* 메인전용 헤더, 푸터에 include로 head와 foot 쓸 수 있게 해줌
+* mainLayoutHead.jspf에 header 태그 만들고 로고있는 a태그 복붙
+
+* 코드 수정(꾸미기)
+  * 가운데 정렬(부모에 flex items-center 하면 됨)
+  * flex의 자식은 자동으로 높이가 부모랑 같아짐
+
+* main.jsp에서 일단 아무 글이나 나오게 수정
+  * 내용은 Lorem 적고 텝하면 나오는 글로 사용
+
+* 관리자 페이지라는 표시용으로 로고에 ADMIN 적어줌(main, login)
+* 비어있는 링크들 주소 알맞게 채우기
+
+### 관리자 로그아웃
+
+* UsrMemberController에서 doLogout 복사해서 AdmMemberController에 넣고 수정
+
