--- a/실행 주소.md
+++ b/실행 주소.md
@@ -50,3 +50,15 @@
 
 * 댓글 수정
   * http://localhost:8021/usr/reply/doModify?id=1&body=ㅋㅋㅋ
+
+* 관리자 로그인 화면
+  * http://localhost:8021/adm/member/Login
+
+* authKey로 게시물 작성
+  * http://localhost:8021/usr/article/doAdd?boardId=1&title=제목authkey&body=내용authkey&authKey=authKey1__39286ba6-3157-11ec-805d-2cf05da835df__0.2614991490370586
+
+* AuthKey 얻어오기
+  * http://localhost:8021/usr/member/authKey?loginId=user1&loginPw=user1
+
+* AuthKey로 회원 확인
+  * http://localhost:8021/usr/member/memberByAuthKey?authKey=authKey1__39286ba6-3157-11ec-805d-2cf05da835df__0.2614991490370586
