--- a/준비.md
+++ b/준비.md
@@ -69,6 +69,24 @@
     * MySQL Driver
     * Spring Web
 * pom.xml 에서 java.version 을 8로 바꿔줘야 함
+* sql문 작성 시 명령어가 아닌 UI로 변경했으면 히스토리에서 복사해서 코드 적어놓기
+  * 나중에 전체 실행 할 때, 같이 적용 될 수 있도록
+* 인덱스 거는 것은 나중에 slow query 사용해서 일정 시간 이상 걸리는 부분 확인해서 설정해도 됨
+
+### 포스트와 겟
+
+* GET
+  * 브라우저에 히스토리에 남음
+  * 북마크 가능
+  * 길이 제한이 있음
+  * 중요한 정보를 다루면 안됨(보안)
+  * 서버의 리소스 데이터를 요청할 때만 사용
+* POST
+  * 캐시되지 않음
+  * 히스토리에 남지 않음
+  * 북마크 되지 않음
+  * 길이 제한 없음
+  * 서버의 리소스를 새로 생성하거나 업데이트할 때 사용
 
 ## 프레임워크란
 
