--- a/종합/인터셉터.md
+++ b/종합/인터셉터.md
@@ -4,9 +4,13 @@
 
 * HttpSession session = request.getSession();
   * 시작 전에 검사할거란 뜻
+* authKey가 있는지(+올바른지) 확인해서 request에 authKeyStatus라는 이름으로 값 저장
+  * 값이 올바르면 로그인한 id를 저장해 둠
+  * NeedLogin 에서 확인해서 로그인 생략하도록 함
 
-### NeedToLoginInterceptor, NeedToLogoutInterceptor
+### NeedLoginInterceptor, NeedLogoutInterceptor
 
 * request.getAttribute("isLogined")
   * beforeActionInterceptor 먼저 실행 되는데 여기서 isLogined를 생성해서 이것 만으로 로그인 여부 파악 가능
 
+* resultCode, resultMsg를 따로 만들어 놓음
