--- a/JSP/순서.md
+++ b/JSP/순서.md
@@ -167,3 +167,50 @@
 
 * UsrMemberController에서 doLogout 복사해서 AdmMemberController에 넣고 수정
 
+### 로그인페이지로 보내기
+
+* 바로 관리자페이지로 이동하면 '관리자만 이용해주세요.' 라는 메세지를 받고 로그인 화면으로 이동하고 로그인 성공하면 그 페이지로 돌아가야함
+  * 로그인화면에서 redirectUri=null로 되있는 부분을 돌아갈 주소로 바꿔줘야 함
+
+* 프로젝트에서 Ctrl + H 로 Uri를 찾아서 Url 로 변경함(Uri가 맞는건데 통일을 위해서)
+
+* BeforeActionInterceptor 작성 -> Util 작성
+
+  * 깃 복붙 및 수정
+
+  * toJsonStr : 제이슨 형태로 만들어줌
+
+* login.jsp 로그인하면 갈 주소부분 만들어줌(히든)
+
+* AdmMemberController 의 doLogin 부분에 String redirectUrl 추가해서 null일 때, 홈의 메인으로 설정함
+
+### 유틸함수 추가
+
+* NeedAdminInterceptor 에 encodedAfterLoginUrl 부분을 널이면 공백, 아니면 제 값을 리턴하는 함수
+  * Util.ifNull로 감싸고 함수만듬
+
+* 그래도 길어서 Util에 reqAttr을 만들어서 이걸로 대체
+  * reqAttr에서 ifNull을 사용함
+
+* admMemberController에서 redirectUrl이 널인지 확인하는 부분 함수로 바꿈
+
+  * Util.isEmpty(redirectUrl)
+  * 다른 곳에서도 쓸 수 있게 Object 형으로 받아서 데이터타입별로 비교
+
+  * 좀더 수정해서 ifEmpty도 만듬
+    * 공백이면 디폴트, 아니면 자기 자신 리턴
+
+### 관리자 게시물 리스트
+
+* AdmArticleController 부분의 list 수정
+
+* msgAndBack 만듬
+  * ResponsBody를 지워서 jsp에서 변수처럼 사용할 수 있도록
+* jsp폴더 밑에 common폴더 만들고, redirect.jsp 만듬
+* adm 폴더 밑에 article폴더 만들고, list.jsp 만듬
+* 밑에 주소에서 복사해서 게시판 꾸밈
+  * https://github.com/jhs512/vue3-ts-exam/blob/master/src/pages/ArticleListPage.vue
+
+* 게시판이 많아질 때를 대비해서 article.extra__boardName으로 게시판 종류를 추가하도록 수정
+  * article에 extra__boardName 추가
+  * ArticleDao.xml의 getForPrintArticles에 코드 수정
