--- a/기타.md
+++ b/기타.md
@@ -22,3 +22,49 @@
   * column-reverse : 아래에서 위
 * flex-direction : row-reverse
   * 오른쪽에서 왼쪽으로 정렬
+
+### 이클립스 단축키
+
+* Ctrl + Shift + R
+  * 원하는 파일 검색해서 열기
+* Ctrl + Shift + F
+  * 페이지 보기 좋게 정렬
+* Ctrl + H
+  * 단어검색
+
+### SQLyog 단축키
+
+* F9
+  * 실행
+* 테이블 클릭 후 F6
+  * 테이블 변경 가능
+
+### JSON Viewer
+
+* json 을 보기 좋게 해주는 크롬확장프로그램
+
+### Postman
+
+* 주소를 계속 적어주는 걸 대신 해주는 툴
+* 다운로드하고 구글로그인 하면 됨
+* My Workspace에서 new -> Collection -> 이름 변경(프로젝트명)
+* untact 우클릭 -> Add Folder -> 이름 변경(로그인)
+* 로그인 우클릭 -> Add Request -> 이름 변경(user1)
+* 로그인 우클릭 -> Add Request -> 이름 변경(user2)
+* GET 부분에 주소 적고 밑에 KEY에 loginId, loginPw 기리고 VALUE에는 user1, user1 적어주고 Send 누름
+* 이런식으로 한번 만들어 놓으면 들어가서 Send만 눌러서 사용 가능
+
+### 포스트와 겟
+
+* GET
+  * 브라우저에 히스토리에 남음
+  * 북마크 가능
+  * 길이 제한이 있음
+  * 중요한 정보를 다루면 안됨(보안)
+  * 서버의 리소스 데이터를 요청할 때만 사용
+* POST
+  * 캐시되지 않음
+  * 히스토리에 남지 않음
+  * 북마크 되지 않음
+  * 길이 제한 없음
+  * 서버의 리소스를 새로 생성하거나 업데이트할 때 사용
