--- a/JSP/순서.md
+++ b/JSP/순서.md
@@ -214,3 +214,68 @@
 * 게시판이 많아질 때를 대비해서 article.extra__boardName으로 게시판 종류를 추가하도록 수정
   * article에 extra__boardName 추가
   * ArticleDao.xml의 getForPrintArticles에 코드 수정
+
+* 게시물 리스트 상단에 게시판 변경 셀렉트 박스 추가
+  * list.jsp에 select 만들고 밑에 javascript 문법 추가
+  * head.jspf에 paramJson 추가(beforeActionInterceptor에 정의돼 있음)
+    * 다른데서도 편하게 param을 사용할 수 있도록
+
+### 관리자 게시물 작성 폼
+
+* 글쓰기 버튼 생성
+  * login.jsp의 로그인 버튼 클래스 사용함
+* article폴더 밑에 add.jsp 파일 생성 및 코드 수정(깃에서 구해옴)
+* 공통 css부분 common.css에 추가
+
+### getFile 테이블 생성
+
+### 첨부파일 입력상자 2개 추가
+
+* add.jsp의 내용 밑에 첨부파일 코드 생성
+
+* input의 타입을 file로 하면 첨부파일 버튼이 생성되는데 첨부는 안됨
+
+  * form 에 enctype="multipart/form-data" 를 추가해 줘야 사용 가능
+
+  * 이렇게 multipart를 사용하면 데이터 전달방식의 차이 때문에 java코드도 고쳐야 하는데 스프링부트는 다 알아서 해주기 때문에 신경 안써도 됨
+
+### 업로드 된 파일 저장
+
+* AdmArticleController의 doAdd에 코드 추가
+* Util 에 함수 추가
+* GenFileService 를 Autowired 걸어주고 Service에 생성 및 코드 추가
+
+* GenDao 인터페이스와 xml생성(ArticleDao.xml 복붙 및 수정)
+* GenFileService 위에 genFileDirPath 적어주고 @Value("${custom.genFileDirPath}") 붙힘
+  * application.yml 에 코드 추가해서 파일 저장될 경로 지정
+  * custom의 genFileDirPath라는 이름으로 경로 적어주면 됨
+
+* 게시물추가 되는지 테스트(+ 저장)
+
+### 리스트에 첨부파일1일 있다면 그것을 썸네일로 표시
+
+* AdmArticleController의 showList 밑에 코드 추가
+* dto패키지에 GenFile 생성 및 코딩
+* GenFileService에 getGenFile 생성
+* GenFileDao 작성
+* list.jsp 수정
+* WebMvcConfig 수정
+
+### 게시물 등록하면 상세페이지로 넘어가게 설정
+
+* AdmArticleController의 doAdd 수정(리턴타입 String, responsebody 지우기 + ＠)
+
+* BaseController에 msgAndReplace 추가
+
+### 파일 업로드 50MB 용량제한
+
+* add.jsp의 form에 onsubmit 속성 추가 및 스크립트 코드 작성(입력없을 시에 경고창)
+
+### 글 작성시 파일 업로드를 ajax 전송을 변경
+
+* add.jsp에 스크립트코드 추가
+* AdmArticleController 복사해서 CommonGenFileController 생성 및 수정
+
+### 관리자 게시물 작성시 첨부파일 개수를 반복문으로 조절
+
+* 
