--- a/JSP/순서.md
+++ b/JSP/순서.md
@@ -278,4 +278,36 @@
 
 ### 관리자 게시물 작성시 첨부파일 개수를 반복문으로 조절
 
-* 
+* add.jsp 수정
+
+### ajax로 업로드된 파일 저장처리
+
+* 포스트맨에 gen파일 폴더와 파일업로드 파일 생성
+* 파일업로드의 body를 form-data로 변경
+* key에 값 추가(파일(셀렉트)로 선택), value는 올릴 실제 파일 선택
+* 실행시 로그인은 authKey 가져오기의 authKey를 복사해서 사용함
+* CommonGenFileController의 doUpload 수정
+* GenFileService에 saveFiles 새성
+
+* pom.xml에 구아바 추가
+  * GenFileService의 saveFiles에서 Joiner 사용하려고
+
+* ArticleService의 addArticle 수정
+* Util에 getListDividedBy 생성
+
+* GenFileService에 changeRelId 생성 -> GenFileDao에 changeRelId 생성
+
+* 포스트맨에 파일업로드 후 글 작성 생성
+
+### 글 수정, 삭제 버튼
+
+* list.jsp 코드 수정
+
+### 게시물 관련 파일도 같이 삭제
+
+* ArticleService의 deleteArticle에서 genFileService의 deleteFiles 호출
+* genFileService에 deleteFiles 생성
+
+* GenFileDao에 코드 생성
+
+* Util에 delteFile 생성
