--- a/기타.md
+++ b/기타.md
@@ -68,3 +68,9 @@
   * 북마크 되지 않음
   * 길이 제한 없음
   * 서버의 리소스를 새로 생성하거나 업데이트할 때 사용
+
+### 개발자도구
+
+* F12 눌러서 들어감
+* Network 확인 시, 왼쪽 위에 ⊘ 눌러서 지우고, Ctrl + Shift + R 눌러서 나온거 또 지우고, 위에 체크 두개 하고 실행
+* console 확인 시, 오른쪽 설정버튼 눌러서 Preserve log 체크하고 내용 지우고 실행
